# open-siege

./: .gitignore  .gitmodules  BUILD-LINUX.md  BUILD-MACOS.md  BUILD-WINDOWS.md  CMakeLists.txt
3space/: CMakeLists.txt  (+1 more)
3space/cscript/: CMakeLists.txt  LICENSE-Torque3D.md  README.md  script_resolver.cpp  script_resolver.h  torqueConfig.h  torque_compat.hpp
3space/cscript/T3D/assets/: ImageAsset.h  SoundAsset.h
3space/cscript/T3D/gameBase/: gameConnection.h  gameConnectionEvents.h
3space/cscript/app/: version.h
3space/cscript/console/: console.cpp  console.h  consoleFunctions.cpp  consoleInternal.cpp  consoleInternal.h  consoleLogger.cpp  consoleTypes.cpp  consoleTypes.h  engineDoc.cpp  engineStructs.cpp  engineStructs.h  fileSystemFunctions.cpp  persistenceManager.cpp  simObject.cpp  simObject.h  simPersistID.cpp  simPersistID.h  simPersistSet.cpp  simSerialize.cpp
3space/cscript/console/torquescript/: CMDgram.h  CMDgram.y  CMDscan.cpp  CMDscan.l  TRIBES1-GRAMMAR.md  astNodes.cpp  cmdgram.cpp  codeBlock.cpp  codeBlock.h  compiledEval.cpp  compiler.cpp  compiler.h  dialectATransform.cpp  dialectATransform.h  dialectBEval.cpp  dialectBEval.h  dialectDetect.cpp  dialectDetect.h  runtime.cpp  runtime.h
3space/cscript/core/: fileObject.cpp  frameAllocator.cpp  memVolume.cpp  memVolume.h  resource.cpp  resource.h  resourceManager.cpp  resourceManager.h  tSimpleHashTable.h  tokenizer.cpp  virtualMountSystem.cpp  virtualMountSystem.h  volume.cpp  volume.h
3space/cscript/core/stream/: fileStream.cpp  fileStream.h  fileStreamObject.cpp  fileStreamObject.h  stream.cpp  stream.h
3space/cscript/core/strings/: stringFunctions.h  unicode.cpp
3space/cscript/core/util/: byteBuffer.cpp  byteBuffer.h  hashFunction.cpp  hashFunction.h  path.cpp  path.h  refBase.cpp  refBase.h  str.cpp  tDictionary.h  tList.h  timeClass.cpp  timeClass.h  uuid.cpp  uuid.h
3space/cscript/gfx/: gFont.h  gfxShader.h
3space/cscript/gfx/bitmap/: gBitmap.h
3space/cscript/gui/editor/: guiInspector.h
3space/cscript/math/: mMathFn.h  mMath_C.cpp  mMatrix.h  mPoint3.h  mPoint4.h
3space/cscript/math/impl/: float3_impl.inl  float4_impl.inl  mat44_impl.inl  math_c.cpp
3space/cscript/math/isa/: x86_stubs.cpp
3space/cscript/math/public/: float3_dispatch.h  float4_dispatch.h  mat44_dispatch.h  math_backend.cpp  math_backend.h
3space/cscript/platform/: platform.cpp  platform.h  platformNet.cpp  platformVolume.cpp  platformVolume.h  profiler.cpp  types.gcc.h
3space/cscript/platformMac/: macFileIO.mm  macMath.mm  macVolume.h  macVolume.mm
3space/cscript/platformPOSIX/: POSIXConsole.cpp  POSIXFileio.cpp  POSIXIO.cpp  POSIXMath.cpp  POSIXStdConsole.h  POSIXTime.cpp  POSIXUtils.cpp  posixVolume.cpp  posixVolume.h
3space/cscript/sfx/: sfxProfile.h
3space/cscript/sim/: actionMap.h
3space/cscript/stubs/: engine_stubs.cpp
3space/cscript/tests/: binding.test.cpp  binding_macros.test.cpp  datablock.test.cpp  datablock_probe.cpp  dialectCorpus.test.cpp  dialectDetect.test.cpp  entity_bindings.test.cpp  exec.test.cpp  funcref.test.cpp  hello_smoke.cpp  hud_bindings.test.cpp  mission.test.cpp  player_binding.test.cpp  script_callbacks.test.cpp  simgroup.test.cpp  vm.test.cpp
3space/cscript/ts/: tsShape.h  tsShapeConstruct.h
apps/open-siege-t1-client/: CMakeLists.txt  chat_ui.cpp  chat_ui.hpp  client_imgui.cpp  client_imgui.hpp  flag_ui.cpp  flag_ui.hpp  hud_glue.cpp  hud_glue.hpp  main.cpp  pause_menu.cpp  pause_menu.hpp  spawn_ui.cpp  spawn_ui.hpp
apps/open-siege-t1-server/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/osengine/: ai_bindings.hpp  ai_perception.hpp  audio_sink.hpp  bot_paths.hpp  chat_channel.hpp  damage_resolver.hpp  entity_state.hpp  flag_state.hpp  ghost_emitter.hpp  ghost_encoder.hpp  ghost_stream.hpp  ghost_types.hpp  height_sampler.hpp  hud_bindings.hpp  inv_station.hpp  listen_server.hpp  loopback_transport.hpp  map_cycle.hpp  match_state.hpp  mission_bounds.hpp  mission_loader.hpp  mission_sounds.hpp  movecommand.hpp  net_client.hpp  paths.hpp  predicted_player.hpp  projectile.hpp  projectile_world.hpp  reliable_acks.hpp  scoreboard.hpp  server_listener.hpp  server_world_snapshot.hpp  session_table.hpp  tah_burst_orchestrator.hpp  tah_class_encoders.hpp  tah_class_registry.hpp  tah_datablock_encoder.hpp  tah_default_catalogue.hpp  tah_ghost_burst.hpp  tah_phase_reply.hpp  (+4 more)
engine/src/: ai_perception.cpp  ai_tick.cpp  bot_paths.cpp  chat_channel.cpp  client_events.cpp  damage_resolver.cpp  entity_state.cpp  flag_state.cpp  ghost_emitter.cpp  ghost_encoder.cpp  ghost_types.cpp  listen_server.cpp  map_cycle.cpp  match_state.cpp  mission_bounds.cpp  mission_loader.cpp  mission_sounds.cpp  movecommand.cpp  net_client.cpp  null_audio_sink.cpp  paths.cpp  player_controller.cpp  player_simobject.cpp  projectile_world.cpp  reliable_acks.cpp  scoreboard.cpp  server_listener.cpp  session_table.cpp  tah_burst_orchestrator.cpp  tah_class_encoders.cpp  tah_class_registry.cpp  tah_datablock_encoder.cpp  tah_default_catalogue.cpp  tah_ghost_burst.cpp  tah_phase_reply.cpp  tah_vc_outbound.cpp  team_assigner.cpp  wav_loader.cpp  weapons.cpp  world_tick.cpp
examples/dts-viewer/: CMakeLists.txt  ai_bindings.cpp  ai_player.cpp  ai_player.hpp  ai_tick.cpp  ai_tick.hpp  asset_browser.cpp  asset_browser.hpp  asset_cache.cpp  asset_cache.hpp  asset_resolver.cpp  asset_resolver.hpp  audio.cpp  audio.hpp  camera.hpp  cscript_host.cpp  cscript_host.hpp  entity_bindings.cpp  entity_bindings.hpp  entity_renderer.cpp  entity_renderer.hpp  gl_includes.hpp  height_sampler.hpp  help_menu.cpp  help_menu.hpp  hud.cpp  hud.hpp  hud_bindings.cpp  imgui_layer.cpp  imgui_layer.hpp  inspector.cpp  inspector.hpp  interior_renderer.cpp  interior_renderer.hpp  inv_station.cpp  jitter_buffer.hpp  lag_compensation.hpp  lighting.cpp  lighting.hpp  main.cpp  (+45 more)
examples/net-test-client/: CMakeLists.txt  client_events.cpp  client_events.hpp  ghost_stream.cpp  ghost_stream.hpp  ghost_types.cpp  ghost_types.hpp  main.cpp  movecommand.cpp  reliable_acks.cpp
siege-studio/: CMakeLists.txt  conanfile.py
(+104 files in other folders)
